fix: logo not showing correctly in dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -52,5 +52,6 @@
 }
 
 .logo {
+    background-size: contain;
     background-image: url("/vogi_logo_dark.png");
 }
